--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "embla-carousel-autoplay": "^7.0.0-rc01",
     "embla-carousel-react": "^7.0.0-rc01",
     "next": "12.2.0",
